fix text align aside-news

--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,10 @@ header .search {
   grid-gap: 10px
 }
 
+.hero .aside h2{
+  padding: 0 20px 30px 20px;
+}
+
 .hero .aside .news1{
   /* height: 50%; */
   background-image:url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/10/tnw2020-feature_img-02.jpg);
